# ndrpDASODKpKASKASKASkrpi

./: App.tsx  easydonate.html  hotland.db  index.html  package-lock.json  package.json  server.js  tailwind.config.js
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  hotland.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
