[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
bcrypt = "0.15.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "hostname", "builder"] }
redis = { version = "0.25", features = ["tokio-comp"] }
chrono = "0.4"
dotenvy = "0.15"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
rcon = "0.5"
